feat: add dynamic OG-image generation

--- a/content/steal-like-an-artist.mdx
+++ b/content/steal-like-an-artist.mdx
@@ -22,7 +22,7 @@ Hi there, I've read a book called **Steal like an artist**, this is the first bo
 - We're in a digital era, we do most stuff on laptop, phone like taking notes etc...
 - I know this sounds funny😂. Use **Pen & Paper**, this can help you creatively and you write whatever stuff you want
   ![Analog version of the blog](/blog/analog-version-of-blog.jpg)
-- Even the your reading currently is written in Analog version first, even this blog website is designed on my book👇
+- Even the blog your reading currently is written in Analog version first, even this website is designed on my book👇
 
 ## 🔁 Copy copy copy until you find yourself
 
