feat: add code highlighting, new blog html-at-work

--- a/content/steal-like-an-artist.mdx
+++ b/content/steal-like-an-artist.mdx
@@ -9,7 +9,7 @@ tags:
 
 Hi there, I've read a book called **Steal like an artist**, this is the first book i read outside my schoolwork. I'll share things i liked in this book
 
-## Start copying
+<H2>Start copying</H2>
 
 - Everything around you is a copied stuff with their own version
 - You need not to copy all the stuff, copy the stuff which you ❤️love the most
@@ -17,14 +17,14 @@ Hi there, I've read a book called **Steal like an artist**, this is the first bo
 - I took inspiration from Beats and added my own version to it👇
   ![Beats logo vs My logo comparision](/blog/beats-vs-my-logo.jpg)
 
-## Analog side✍️
+<H2>Analog side✍️</H2>
 
 - We're in a digital era, we do most stuff on laptop, phone like taking notes etc...
 - I know this sounds funny😂. Use **Pen & Paper**, this can help you creatively and you write whatever stuff you want
   ![Analog version of the blog](/blog/analog-version-of-blog.jpg)
 - Even the blog your reading currently is written in Analog version first, even this website is designed on my book👇
 
-## 🔁 Copy copy copy until you find yourself
+<H2>🔁 Copy copy copy until you find yourself</H2>
 
 ![Copy until you find yourself](/blog/copy-find-yourself.png)
 
