fix: html-blog rephrasing text

--- a/content/html-i-use-at-my-work.mdx
+++ b/content/html-i-use-at-my-work.mdx
@@ -7,7 +7,7 @@ tags:
   - HTML
 ---
 
-Hi there, i planned to write this blog long back but i faced few TypeScript warnings for code hightlighting in my markdown file, anyways let's start today topic i'll separate the HTML elements into categories
+Hi there, i planned to write this blog long back but i stuck with a TypeScript warning, anyways let's start today topic i've divided the HTML elements into categories & it will be easy to understand
 
 - Typography
 - Layout
@@ -20,7 +20,7 @@ If you're familiar with any text editor like MS Word, Powerpoint, Google Docs yo
 
 ![Beats logo vs My logo comparision](/blog/html-typography.png)
 
-it's just text with different sizes, i use these Typography elements **h1, h2, h3, p, a, strong**
+it's just text with different sizes, i use these HTML elements **h1, h2, h3, p, a, strong**
 
 ```tsx
 // basic syntax of these elements
@@ -29,10 +29,7 @@ it's just text with different sizes, i use these Typography elements **h1, h2, h
 <h2>Hello World</h2>
 <h3>Hello World</h3>
 <p>This is a paragraph</p>
-<a
-  href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals"
-  >MDN Docs</a
->
+<a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/HTML_text_fundamentals">MDN Docs</a>
 <strong>I'm bold</strong>
 ```
 
@@ -52,16 +49,16 @@ This is a paragraph
 
 <H2>Layout</H2>
 
-Assume you'r building a website we'll divide the sections of website into blocks, and use these HTML elements **div, section, header, footer, main, aside**, this picture can explain you more👇
+Every website consists of blocks like navigation, main content & footer section these HTML elements **div, section, header, footer, main, aside** will provide more structure to your website, this picture can explain you more👇
 
 ![Google Docs editor image](/blog/html-layout.png)
 
 ```tsx
 // basic syntax of these layout elements
-<header>Header</header>
-<aside>Slider</aside>
-<main>Content</main>
-<footer>Footer</footer>
+<header>Header</header> // mostly used for navigation
+<aside>Slider</aside> // used for sidebar
+<main>Content</main> // you website main content lives here
+<footer>Footer</footer> // bottom most element of website, generally most people mention there social links here
 
 // these tags are mostly used for grouping elements
 <div>
@@ -78,7 +75,7 @@ Using these elements can contribute for better structure & even help in increasi
 
 <H2>Embeddings</H2>
 
-You can go crazy here, you can literally run a website inside you're HTML file you just need the website URL, 💥boom done attach it to you're **iframe** element and i'll automatically render the website. Here is an example👇
+You can go crazy here, you can literally run a website inside you're HTML file you just need the website URL, attach the website url to you're **iframe** element and i'll automatically render the website 💥boom done. Here is an example👇
 
 ```tsx
 // This will render youtube inside your HTML file
@@ -107,4 +104,4 @@ You can follow these resources to learn HTML
 [MDN Docs](https://developer.mozilla.org/en-US/docs/Web/HTML/Element),
 [W3 Schools](https://www.w3schools.com/html/default.asp)
 
-And that's it for this blog, thanks for making it till here, next blog is going to be mostly on **CSS** stay tuned, peace✌️
+And that's it for this blog, thanks for making it till here, next blog is going to be interesting topic on **CSS** stay tuned, peace✌️
