feat: add new blog css-flex-and-grid

--- a/content/html-i-use-at-my-work.mdx
+++ b/content/html-i-use-at-my-work.mdx
@@ -18,7 +18,7 @@ Hi there, i planned to write this blog long back but i stuck with a TypeScript w
 
 If you're familiar with any text editor like MS Word, Powerpoint, Google Docs you already know this🎉
 
-![Beats logo vs My logo comparision](/blog/html-typography.png)
+![Google Docs editor image](/blog/html-typography.png)
 
 it's just text with different sizes, i use these HTML elements **h1, h2, h3, p, a, strong**
 
@@ -51,7 +51,7 @@ This is a paragraph
 
 Every website consists of blocks like navigation, main content & footer section these HTML elements **div, section, header, footer, main, aside** will provide more structure to your website, this picture can explain you more👇
 
-![Google Docs editor image](/blog/html-layout.png)
+![website layout image](/blog/html-layout.png)
 
 ```tsx
 // basic syntax of these layout elements
