feat: add new blog 5-design-principles

--- a/content/html-i-use-at-my-work.mdx
+++ b/content/html-i-use-at-my-work.mdx
@@ -86,7 +86,7 @@ Here i rendered a <mark>3D modal</mark> using <mark>Spline-3D</mark>
 
 <iframe
   src="https://my.spline.design/molang3dcopy-e322e2236e97835094662d0d17977cda/"
-  frameborder="0"
+  frameBorder="0"
   width="100%"
   height="100%"
   style={{ height: "30rem", borderRadius: "0.5rem" }}
