--- a/content/css-flex-and-grid.mdx
+++ b/content/css-flex-and-grid.mdx
@@ -66,13 +66,13 @@ Here you can play with live code example👇
 
 <iframe
   style={{ height: "30rem", borderRadius: "0.5rem" }}
-  frameborder="0"
+  frameBorder="0"
   width="100%"
   height="100%"
   src="https://codepen.io/pavanbhaskardev/embed/vYqzvWm?default-tab=html%2Cresult"
   loading="lazy"
   allowtransparency="true"
-  allowfullscreen="true"
+  allowFullScreen={true}
 />
 
 <H2>Flex</H2>
@@ -205,13 +205,13 @@ Here you can play with live code example👇
 
 <iframe
   style={{ height: "30rem", borderRadius: "0.5rem" }}
-  frameborder="0"
+  frameBorder="0"
   width="100%"
   height="100%"
   src="https://codepen.io/pavanbhaskardev/embed/wvLEZgy?default-tab=html%2Cresult"
   loading="lazy"
   allowtransparency="true"
-  allowfullscreen="true"
+  allowFullScreen={true}
 />
 
 <H2>Bonus</H2>
@@ -224,13 +224,13 @@ here is an another example of both grid & flex layout together👇
 
 <iframe
   style={{ height: "30rem", borderRadius: "0.5rem" }}
-  frameborder="0"
+  frameBorder="0"
   width="100%"
   height="100%"
   src="https://codepen.io/pavanbhaskardev/embed/rNEZbXO?default-tab=html%2Cresult"
   loading="lazy"
   allowtransparency="true"
-  allowfullscreen="true"
+  allowFullScreen={true}
 />
 
 I'll share learning resources also
