--- a/content/media-queries-in-css.mdx
+++ b/content/media-queries-in-css.mdx
@@ -58,13 +58,13 @@ Let's understand with a sandbox example, let's create a square box(🟥) and cha
 
 <iframe
   style={{ height: "30rem", borderRadius: "0.5rem" }}
-  frameborder="0"
+  frameBorder="0"
   width="100%"
   height="100%"
   src="https://codepen.io/pavanbhaskardev/embed/QWXYwOv?default-tab=html%2Cresult"
   loading="lazy"
   allowtransparency="true"
-  allowfullscreen="true"
+  allowFullScreen={true}
 />
 
 You can use the combination of min-width and max-width and target a set of screen width, here is an example👇
