fix: removed likedIn iframe as it's getting blocked by brave

--- a/content/consistently-showing-up.mdx
+++ b/content/consistently-showing-up.mdx
@@ -15,13 +15,7 @@ Hi there👋, this blog is going to be bit different from my previous once, I'll
 
 My journey into programming started with **C Language**, Coming from an **Electronics** background, I started building projects using **Arduino & ESP32**.
 
-<iframe
-  style={{ borderRadius: "0.5rem" }}
-  src="https://www.linkedin.com/embed/feed/update/urn:li:share:6974243413844004864"
-  height="900"
-  width="504"
-  title="Embedded post"
-/>
+![Embedded sustem development](/blog/consistently-showing-up/arduino.jpeg)
 
 While exploring the embedded systems, I got an internship at my college, which lead to beginning of my web development journey.
 
