feat(new-blog): biryani i ate in hyderabad

--- a/content/consistently-showing-up.mdx
+++ b/content/consistently-showing-up.mdx
@@ -4,7 +4,7 @@ date: 2024-09-22
 summary: A habit which i'm building🏗️
 imageUrl: /blog/consistently-showing-up/cover-pic.png
 tags:
-  - Consistancy
+  - Consistency
 ---
 
 Hi there👋, this blog is going to be bit different from my previous once, I'll share a tip which helped me to make good-progress, hope you'll enjoy it!
